--- a/MFRC522NUCLEOF401RE/MFRC522NUCLEOF401RE.ioc
+++ b/MFRC522NUCLEOF401RE/MFRC522NUCLEOF401RE.ioc
@@ -20,8 +20,9 @@ Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA13
 Mcu.Pin11=PA14
 Mcu.Pin12=PB3
-Mcu.Pin13=PB6
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PH0 - OSC_IN
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PA2
@@ -30,7 +31,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC7
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -83,6 +84,8 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PC14-OSC32_IN.Locked=true
