--- a/MFRC522NUCLEOF401RE/MFRC522NUCLEOF401RE.ioc
+++ b/MFRC522NUCLEOF401RE/MFRC522NUCLEOF401RE.ioc
@@ -11,18 +11,20 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
-Mcu.IP4=USART2
+Mcu.IP4=USART1
 Mcu.IPNb=5
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB3
-Mcu.Pin13=PB5
-Mcu.Pin14=PB6
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin2=PH0 - OSC_IN
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PA2
@@ -31,7 +33,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC7
-Mcu.PinsNb=16
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -48,6 +50,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -64,7 +68,6 @@ PA2.GPIO_Mode=GPIO_MODE_AF_PP
 PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA2.Locked=true
-PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA3.GPIO_Label=USART_RX
@@ -72,7 +75,6 @@ PA3.GPIO_Mode=GPIO_MODE_AF_PP
 PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
-PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
@@ -80,6 +82,8 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -167,8 +171,8 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F401RE
